[workspace]
members = [
    "common",
    "service"
]

# The development profile, used for `cargo build`.
[profile.dev]
opt-level = 0
debug = true
lto = false
debug-assertions = true

# The testing profile, used for `cargo test`.
[profile.test]
opt-level = 0
debug = true
lto = false
debug-assertions = true

# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false

# The benchmarking profile, used for `cargo bench`.
[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false

# The documentation profile, used for `cargo doc`.
[profile.doc]
opt-level = 0
debug = true
lto = false
debug-assertions = true
